# fastapi_oz

./: .gitignore  conftest.py  main.py  pyproject.toml  temp.py  test.sh  test_temp.py
.github/workflows/: ci.yml
app/: __init__.py
app/apis/v1/: meeting_router.py  participant_date_router.py  participant_router.py
app/configs/: base_config.py  tortoise_config.py
app/dtos/: create_meeting_response.py  create_participant_response.py  frozen_config.py  get_meeting_response.py  turn_on_off_star_participant_date_request.py
app/service/: meeting_service_mysql.py  participant_date_service_mysql.py  participant_service_mysql.py
app/tests/apis/v1/: test_best_dates_mysql.py  test_meeting_router_mysql.py  test_participant_date_router_mysql.py  test_participant_router_mysql.py
app/tortoise_models/: base_model.py  meeting.py  participant.py  participant_date.py
app/utils/: base62.py  squids.py
migrations/models/: 0_20250710143252_init.py  1_20250713155636_update.py  2_20250714144929_update.py  3_20250714214729_update.py
